# duplicate-finder

./: Cargo.toml  README.md  duplicate-finder  duplicate-finder.py  duplicate-finder.sh  find-grayscale  levenshtein.py  requirements.txt
src/: cache.rs  clusterer.rs  diff.rs  false_positives.rs  ffmpeg_callback.rs  files.rs  interactive.rs  main.rs  report.rs
