[package]
name = "duplicate-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.6"
image_hasher = "3.0.0"
itertools = "0.14.0"
md-5 = "0.10.6"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
simple-tqdm = {version = "*", features = ["rayon"]}
walkdir = "2.5.0"

png = { version = "0.17.8-rc" }
